# snow-sports-rag

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
configs/: default.yaml
docker/: README.md
docs/: RAG_IMPLEMENTATION_PLAN.md
evaluation/: gold_qa.jsonl  sweep_grid.yaml
knowledge-base/athletes/: Alex Hall.md  Ben Ferguson.md  Brita Sigourney.md  Chloe Kim.md  Chris Corning.md  Danny Davis.md  Hailey Langland.md  Jamie Anderson.md  Julia Marino.md  Kyle Mack.md  Maggie Voisin.md  Mikaela Shiffrin.md  Nick Goepper.md  Nina OBrien.md  Red Gerard.md  Ryan Cochran-Siegle.md  Shaun White.md  Ted Ligety.md  Tommy Ford.md  Torin Yater-Wallace.md
knowledge-base/circuits/: fis.md  overview.md  us-ski-and-snowboard.md  x-games-and-dew-tour.md
knowledge-base/competitions/: Burton US Open.md  Dew Tour.md  FIS Alpine World Cup.md  FIS Snowboard World Cup.md  US Alpine Championships.md  US Grand Prix.md  Winter Olympic Games.md  X Games Aspen.md
knowledge-base/resorts/: Aspen Snowmass.md  Breckenridge Ski Resort.md  Copper Mountain.md  Killington Resort.md  Mammoth Mountain.md  Palisades Tahoe.md  Park City Mountain Resort.md  Steamboat Springs.md  Sun Valley.md  Vail Mountain.md
knowledge-base/results/: 2018 Pyeongchang Olympics - Snowboard Halfpipe Men.md  2018 Pyeongchang Olympics - Snowboard Slopestyle Men.md  2020 X Games Aspen - Snowboard Halfpipe Women.md  2021 X Games Aspen - Freeski Slopestyle Women.md  2022 Beijing Olympics - Alpine Super-G Men.md  2022 Beijing Olympics - Freeski Slopestyle Men.md  2022 Beijing Olympics - Snowboard Halfpipe Men.md  2022 Beijing Olympics - Snowboard Halfpipe Women.md  2022 Beijing Olympics - Snowboard Slopestyle Women.md  2022 Burton US Open - Snowboard Halfpipe Women.md  2022 Burton US Open - Snowboard Slopestyle Women.md  2022 Dew Tour - Freeski Slopestyle Men.md  2022 Dew Tour - Snowboard Halfpipe Women.md  2022 Dew Tour - Snowboard Slopestyle Women.md  2022 Killington World Cup - Alpine Slalom Women.md  2022 US Grand Prix - Snowboard Halfpipe Women.md  2022 X Games Aspen - Freeski Halfpipe Men.md  2022 X Games Aspen - Snowboard Halfpipe Women.md  2023 FIS World Cup - Snowboard Halfpipe Women Final.md  2023 Killington World Cup - Alpine Slalom Women.md  2023 US Alpine Championships - GS Men.md  2023 US Alpine Championships - Slalom Women.md  2023 US Grand Prix - Snowboard Big Air Men.md  2023 X Games Aspen - Freeski Slopestyle Men.md  2023 X Games Aspen - Snowboard Big Air Men.md  2023 X Games Aspen - Snowboard Halfpipe Men.md  2023 X Games Aspen - Snowboard Halfpipe Women.md  2023 X Games Aspen - Snowboard Slopestyle Women.md
src/: __init__.py  __main__.py  cli.py
src/chunking/: __init__.py  factory.py  models.py  strategies.py
src/config/: __init__.py  coalesce.py  loader.py
src/embedding/: __init__.py  factory.py  fake.py  model.py  sentence_transformer.py
src/evaluation/: __init__.py  __main__.py  config_merge.py  gold.py  metrics.py  sweep.py  trace_analyze.py
src/generation/: __init__.py  anthropic.py  factory.py  fake.py  huggingface.py  models.py  openai.py  prompt.py  protocol.py
src/gradio_app/: __init__.py  __main__.py  app.py  components.py  css.py  theme.py
src/ingest/: __init__.py  loader.py  models.py  parse.py
src/llm/: __init__.py  factory.py  fake.py  openai_compatible.py  protocol.py
src/pipeline/: __init__.py  models.py  presets.py  rag_pipeline.py  trace.py
src/rerank/: __init__.py  anthropic_listwise.py  cross_encoder.py  factory.py  identity.py  listwise_utils.py  (+2 more)
tests/: conftest.py  test_chunking.py  test_config.py  test_config_coalesce.py  test_config_merge.py  test_document_expansion.py  test_embedding.py  test_evaluation_metrics.py  test_fusion.py  test_generation.py  test_gold_qa.py  test_llm.py  test_loader.py  test_parse.py  test_pipeline.py  test_query_expansion.py  test_rerank.py  test_retrieval_baseline.py  test_retrieval_hierarchical.py  test_sweep_runner.py  test_trace_analyze.py  test_vectorstore.py
(+16 files in other folders)
